--- a/WoofRunner/Storyboards/LevelMarketplace.storyboard
+++ b/WoofRunner/Storyboards/LevelMarketplace.storyboard
@@ -74,7 +74,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TFQ-cG-dsx">
-                                <rect key="frame" x="137" y="633" width="350" height="100"/>
+                                <rect key="frame" x="137" y="30" width="350" height="100"/>
                                 <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="350" id="KMQ-Ww-OTm"/>
@@ -89,7 +89,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zHh-36-21e">
-                                <rect key="frame" x="537" y="633" width="350" height="100"/>
+                                <rect key="frame" x="537" y="30" width="350" height="100"/>
                                 <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="TOx-2p-CLU"/>
@@ -103,15 +103,26 @@
                                     <action selector="navigateToCreatedGames:" destination="tdJ-zR-Q21" eventType="touchUpInside" id="jmI-V5-IlW"/>
                                 </connections>
                             </button>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9t-8Q-kOw">
+                                <rect key="frame" x="0.0" y="140" width="1024" height="1226"/>
+                                <connections>
+                                    <segue destination="NSu-YN-LSh" kind="embed" id="l0W-Lf-fJh"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zHh-36-21e" firstAttribute="centerY" secondItem="lpb-qU-kRV" secondAttribute="centerY" id="7yk-cm-7Bn"/>
+                            <constraint firstAttribute="trailing" secondItem="M9t-8Q-kOw" secondAttribute="trailing" id="3KK-uB-4Kj"/>
+                            <constraint firstItem="M9t-8Q-kOw" firstAttribute="top" secondItem="zHh-36-21e" secondAttribute="bottom" constant="10" id="Ofu-GE-gb7"/>
+                            <constraint firstItem="M9t-8Q-kOw" firstAttribute="leading" secondItem="lpb-qU-kRV" secondAttribute="leading" id="PnM-Tu-OMo"/>
                             <constraint firstItem="TFQ-cG-dsx" firstAttribute="centerX" secondItem="lpb-qU-kRV" secondAttribute="centerX" constant="-200" id="PxL-Sf-fNI"/>
+                            <constraint firstItem="TFQ-cG-dsx" firstAttribute="top" secondItem="KeS-ql-d5G" secondAttribute="bottom" constant="10" id="Sj5-V6-ybT"/>
+                            <constraint firstItem="M9t-8Q-kOw" firstAttribute="top" secondItem="TFQ-cG-dsx" secondAttribute="bottom" constant="10" id="XdO-yD-DNB"/>
                             <constraint firstItem="zHh-36-21e" firstAttribute="centerX" secondItem="lpb-qU-kRV" secondAttribute="centerX" constant="200" id="bQt-zB-Rof"/>
                             <constraint firstItem="zHh-36-21e" firstAttribute="height" secondItem="TFQ-cG-dsx" secondAttribute="height" id="hfi-JB-aFM"/>
-                            <constraint firstItem="TFQ-cG-dsx" firstAttribute="centerY" secondItem="lpb-qU-kRV" secondAttribute="centerY" id="ofN-rJ-Pf6"/>
                             <constraint firstItem="zHh-36-21e" firstAttribute="width" secondItem="TFQ-cG-dsx" secondAttribute="width" id="qak-VY-QNY"/>
+                            <constraint firstItem="zHh-36-21e" firstAttribute="top" secondItem="KeS-ql-d5G" secondAttribute="bottom" constant="10" id="tXc-CJ-aBS"/>
+                            <constraint firstItem="y8A-dS-2n4" firstAttribute="top" secondItem="M9t-8Q-kOw" secondAttribute="bottom" id="vId-DR-821"/>
                         </constraints>
                     </view>
                     <connections>
@@ -228,6 +239,58 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="og1-3m-h13" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2631" y="153"/>
+        </scene>
+        <!--Level Marketplace List Collection View Controller-->
+        <scene sceneID="0eP-jP-4Ym">
+            <objects>
+                <viewController id="NSu-YN-LSh" customClass="LevelMarketplaceListCollectionViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="I31-XX-mMe">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1226"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="83M-se-B2e">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1226"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9DL-eM-KDa">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="gBR-nG-UYm" customClass="LevelMarketplaceCardViewCell" customModule="WoofRunner" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wC-dd-t1Q">
+                                                    <rect key="frame" x="4" y="15" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <connections>
+                                            <outlet property="gameName" destination="7wC-dd-t1Q" id="1q0-vH-K8W"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="83M-se-B2e" id="PQk-Df-MZD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ExX-AU-0pz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="934.57031249999989" y="821.81551976573928"/>
         </scene>
     </scenes>
 </document>
