Rename LevelMarketplace to LM to shorten file names

--- a/WoofRunner/Storyboards/LevelMarketplace.storyboard
+++ b/WoofRunner/Storyboards/LevelMarketplace.storyboard
@@ -13,7 +13,7 @@
         <!--Login View Controller-->
         <scene sceneID="peZ-2I-7ay">
             <objects>
-                <viewController id="Ecw-wo-h76" customClass="LoginViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Ecw-wo-h76" customClass="LMLoginViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="MJ1-ln-VcH"/>
                         <viewControllerLayoutGuide type="bottom" id="ISg-Vt-QcC"/>
@@ -61,10 +61,10 @@
             </objects>
             <point key="canvasLocation" x="109.5703125" y="147.58418740849194"/>
         </scene>
-        <!--Level Marketplace Home View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="F5f-CP-fEc">
             <objects>
-                <viewController id="tdJ-zR-Q21" customClass="LevelMarketplaceHomeViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="tdJ-zR-Q21" customClass="LMHomeViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KeS-ql-d5G"/>
                         <viewControllerLayoutGuide type="bottom" id="y8A-dS-2n4"/>
@@ -133,10 +133,10 @@
             </objects>
             <point key="canvasLocation" x="934.57031249999989" y="152.8550512445095"/>
         </scene>
-        <!--Level Marketplace List View Controller-->
+        <!--List View Controller-->
         <scene sceneID="orO-6s-rNo">
             <objects>
-                <viewController id="cfW-Iz-XGc" customClass="LevelMarketplaceListViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="cfW-Iz-XGc" customClass="LMListViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="LyJ-Hq-vzb"/>
                         <viewControllerLayoutGuide type="bottom" id="bUL-qn-gm8"/>
@@ -195,10 +195,10 @@
             </objects>
             <point key="canvasLocation" x="1777.7343749999998" y="150.65885797950219"/>
         </scene>
-        <!--Level Marketplace List Collection View Controller-->
+        <!--List Collection View Controller-->
         <scene sceneID="Qk3-d5-cMf">
             <objects>
-                <viewController id="jC7-Um-Iho" customClass="LevelMarketplaceListCollectionViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="jC7-Um-Iho" customClass="LMListCollectionViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Xoi-4S-Qrb">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1277"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -210,7 +210,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="OCs-W3-1uL" customClass="LevelMarketplaceCardViewCell" customModule="WoofRunner" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="OCs-W3-1uL" customClass="LMCardViewCell" customModule="WoofRunner" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -240,10 +240,10 @@
             </objects>
             <point key="canvasLocation" x="2631" y="153"/>
         </scene>
-        <!--Level Marketplace List Collection View Controller-->
+        <!--List Collection View Controller-->
         <scene sceneID="0eP-jP-4Ym">
             <objects>
-                <viewController id="NSu-YN-LSh" customClass="LevelMarketplaceListCollectionViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="NSu-YN-LSh" customClass="LMListCollectionViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="I31-XX-mMe">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1226"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -259,7 +259,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="gBR-nG-UYm" customClass="LevelMarketplaceCardViewCell" customModule="WoofRunner" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="gBR-nG-UYm" customClass="LMCardViewCell" customModule="WoofRunner" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
