--- a/WoofRunner/Storyboards/LevelSelector.storyboard
+++ b/WoofRunner/Storyboards/LevelSelector.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -28,7 +29,23 @@
                     <view key="view" contentMode="scaleToFill" id="JD4-3v-opV" customClass="iCarousel">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VnG-P1-GCq">
+                                <rect key="frame" x="20" y="20" width="141" height="65"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="35"/>
+                                <state key="normal" title="Home">
+                                    <color key="titleColor" red="0.85329520962012562" green="0.69795945232376311" blue="1" alpha="0.83834546232876717" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="onPressHomeBtn:" destination="rrS-Wa-h6v" eventType="touchUpInside" id="d9S-Dx-f3f"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VnG-P1-GCq" firstAttribute="leading" secondItem="JD4-3v-opV" secondAttribute="leadingMargin" id="Na8-38-G6A"/>
+                            <constraint firstItem="VnG-P1-GCq" firstAttribute="top" secondItem="I4Q-kf-4qZ" secondAttribute="bottom" id="obZ-eV-28G"/>
+                        </constraints>
                         <connections>
                             <outlet property="dataSource" destination="rrS-Wa-h6v" id="2L0-H8-Fb8"/>
                             <outlet property="delegate" destination="rrS-Wa-h6v" id="eDQ-ae-LDd"/>
@@ -36,12 +53,13 @@
                     </view>
                     <connections>
                         <outlet property="carousel" destination="JD4-3v-opV" id="5Xy-h1-lwn"/>
+                        <outlet property="homeButton" destination="VnG-P1-GCq" id="Ghr-Qq-f8U"/>
                         <segue destination="PNO-jM-qhv" kind="show" identifier="segueToGameplay" id="YCo-GV-vdO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pqy-Ew-SYV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137" y="197"/>
+            <point key="canvasLocation" x="136.5234375" y="196.77891654465591"/>
         </scene>
     </scenes>
 </document>
