--- a/WoofRunner/Storyboards/LevelMarketplace.storyboard
+++ b/WoofRunner/Storyboards/LevelMarketplace.storyboard
@@ -72,7 +72,7 @@
                                     <constraint firstAttribute="height" constant="100" id="Ttz-eN-jLx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Downloaded Levels">
+                                <state key="normal" title="Explore More">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -87,7 +87,7 @@
                                     <constraint firstAttribute="width" constant="350" id="me6-uQ-PL6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Created Levels">
+                                <state key="normal" title="Your Levels">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
